# OpenSourceSleuth

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  TROUBLESHOOTING.md  app.py  ocr_processor.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.streamlit/: config.toml
sourcesleuth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: __init__.py  config.py  ingest.py  mcp_server.py  ocr_processor.py  pdf_processor.py  source_sleuth.py  vector_store.py
tests/: test_dataset_preprocessor.py  test_ingest.py  test_integration_pdfs.py  test_mcp_server.py  test_pdf_processor.py
