[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcesleuth"
version = "1.0.0"
description = "An MCP server that helps students recover citations for orphaned quotes by performing semantic search across local academic PDFs."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "SourceSleuth Contributors"}
]
keywords = ["mcp", "citations", "pdf", "semantic-search", "academic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "sentence-transformers>=3.0.0",
    "PyMuPDF>=1.24.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]
ui = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
]

[project.scripts]
sourcesleuth = "src.mcp_server:main"
sourcesleuth-ingest = "src.ingest:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
